src/client/leaderboard/stylesheets/sass/screen.css
/* line 42, ../../sass/sass/screen.scss */
pl-leaderboard {
  position: relative;
  height: 100%;
  z-index: 2;
  color: rgba(252, 250, 249, 0.75);
}
/* line 48, ../../sass/sass/screen.scss */
pl-leaderboard .leaders-header {
  margin: 4.2% auto 5.8%;
  width: 40%;
  content: url("../../assets/logo.png");
}
/* line 54, ../../sass/sass/screen.scss */
pl-leaderboard article {
  margin: 0 auto;
  max-width: 70%;
  max-height: 85%;
}
/* line 59, ../../sass/sass/screen.scss */
pl-leaderboard article section {
  width: 100%;
  vertical-align: middle;
}
/* line 63, ../../sass/sass/screen.scss */
pl-leaderboard article section ul {
  margin: 0 auto;
  padding: 0;
  max-width: 94%;
  list-style-type: none;
}

/*
  -----------------------
       list styles
  -----------------------
*/
/* line 80, ../../sass/sass/screen.scss */
pl-leaderboard article section ul li {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
/* line 85, ../../sass/sass/screen.scss */
pl-leaderboard article section ul li .rank {
  width: 12%;
  max-width: 12%;
}
/* line 90, ../../sass/sass/screen.scss */
pl-leaderboard article section ul li .username {
  width: 64%;
  max-width: 64%;
  word-break: break-all;
}
/* line 104, ../../sass/sass/screen.scss */
pl-leaderboard article section ul li .score {
  width: 24%;
  max-width: 24%;
  text-align: right;
}

/* line 111, ../../sass/sass/screen.scss */
ul.leaders li {
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  font-size: 1.7em;
  font-weight: 800;
  letter-spacing: 2px;
  padding: 2.35% 2.55%;
  height: 100%;
}
/* line 119, ../../sass/sass/screen.scss */
ul.leaders li:first-child {
  color: #5daa59;
  font-weight: 900;
}
/* line 124, ../../sass/sass/screen.scss */
ul.leaders li .rank {
  font-size: 1.1em;
}
/* line 128, ../../sass/sass/screen.scss */
ul.leaders li .rank:after {
  display: inline-block;
  content: "th";
  font-weight: 500;
  text-transform: uppercase;
  font-size: .6em;
  vertical-align: top;
  line-height: 1em;
  margin: .15em 0 0 .2em;
}
/* line 139, ../../sass/sass/screen.scss */
ul.leaders li:nth-child(1) .rank:after {
  content: "st";
}
/* line 143, ../../sass/sass/screen.scss */
ul.leaders li:nth-child(2) .rank:after {
  content: "nd";
}
/* line 147, ../../sass/sass/screen.scss */
ul.leaders li:nth-child(3) .rank:after {
  content: "rd";
}

/*
  -----------------------
        scaling
  -----------------------
*/
@media (min-width: 1920px) {
  /* line 161, ../../sass/sass/screen.scss */
  body {
    font-size: 18px;
  }

  /* line 165, ../../sass/sass/screen.scss */
  pl-leaderboard article {
    margin: 0 auto;
    max-width: 58%;
    max-height: 80%;
  }
}
/*
  -----------------------
      list gradient
  -----------------------
*/
/* line 179, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:first-child {
  background-color: rgba(0, 179, 214, 0.5);
}

/* line 180, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(2) {
  background-color: rgba(1, 170, 205, 0.5);
}

/* line 181, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(3) {
  background-color: rgba(1, 158, 191, 0.5);
}

/* line 182, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(4) {
  background-color: rgba(0, 148, 177, 0.5);
}

/* line 183, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(5) {
  background-color: rgba(1, 138, 167, 0.5);
}

/* line 184, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(6) {
  background-color: rgba(0, 128, 155, 0.5);
}

/* line 185, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(7) {
  background-color: rgba(0, 123, 149, 0.5);
}

/* line 186, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(8) {
  background-color: rgba(0, 116, 141, 0.5);
}

/* line 187, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(9) {
  background-color: rgba(0, 110, 133, 0.5);
}

/* line 188, ../../sass/sass/screen.scss */
pl-leaderboard article section ul.leaders li:nth-child(10) {
  background-color: rgba(0, 102, 126, 0.5);
}

/*
 * Fade List Animation
 */
/* line 5, ../../sass/sass/animations.scss */
.fade {
  -webkit-animation: listfade linear 2s;
  /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: listfade linear 2s;
  /* Firefox < 16 */
  -ms-animation: listfade linear 2s;
  /* Internet Explorer */
  -o-animation: listfade linear 2s;
  /* Opera < 12.1 */
  animation: listfade linear 2s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}

/* Firefox < 16 */
@-moz-keyframes listfade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
/* Internet Explorer */
@-ms-keyframes listfade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
/* Opera < 12.1 */
@-o-keyframes listfade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes listfade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
/*
 * BG Star Animation
 */
/* line 58, ../../sass/sass/animations.scss */

/*
 * Change Spots Animation
 */
@keyframes change {
  from {
    opacity: .3;
  }
  to {
    opacity: 1;
    transform: rotate3d(1, 0, 0, 360deg);
  }
}
/* line 146, ../../sass/sass/animations.scss */
ul.leaders > li {
  will-change: transform;
}
/* line 149, ../../sass/sass/animations.scss */
ul.leaders > li.change {
  animation: change 1s ease;
}

.leaderboard {
    transition: opacity 0.5s linear;
    opacity: 1;
    font-family: Overpass;
}
.leaderboard.hidden {
    opacity: 0.0;
}

